<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="256dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fragment_sent_information_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_of_smell"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTypeSmell"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other_details"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvComment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/duration_of_smell"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDurationSmell"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time_sent_information"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/smell_level"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSmellLevel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size_fragment_sent_information"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSentInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_fragment_main"
                    android:background="@drawable/selector_btn_default"
                    android:text="@string/sent_information"
                    android:textAllCaps="false" />

            </LinearLayout>
    </ScrollView>
</LinearLayout>