<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/how_long_your_smell"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_fragment_main"
                android:textStyle="bold"
                android:gravity="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top_fragment_main">

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Present Time"
                    android:textSize="@dimen/text_size_fragment_main"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSetTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_time"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_fragment_main">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnLessThan1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_less_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/less_than_1_minute"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnMoreThan1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_more_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_1_minute"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnTime15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_15" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_15_minute"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnTime30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_30" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_30_minute"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnTime45"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_45" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_45_minute"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtnTime60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/selector_btn_default"
                        android:scaleType="fitXY"
                        android:src="@drawable/time_60" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_1_hour"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/text_size_fragment_smell_time"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_margin_background_activity" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>